--- a/client/src/app/Modules/Login/login/login.html
+++ b/client/src/app/Modules/Login/login/login.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="custom-shape-divider-top-1771749851">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+    </svg>
+</div>
+
+<div class="login-container">
+    <h2>Login</h2>
+
+    <input type="text" [(ngModel)]="name"  placeholder="Email or Username" required>
+    <input type="password" [(ngModel)]="pass" placeholder="Password" required>
+
+    <div class="forgot">
+        <a routerLink="/forgot-password">Forgot Password?</a>
+    </div>
+
+    <button (click)="onLogin()">Login</button>
+
+    <div class="register">
+        Don't have an account?
+        <a routerLink="/signup">Register</a>
+    </div>
+</div>
