--- a/client/src/app/Modules/Login/forgot-password/forgot-password.html
+++ b/client/src/app/Modules/Login/forgot-password/forgot-password.html
@@ -7,12 +7,12 @@
 <form class="forgot-container">
     <h2>ForgotPassword</h2>
 
-    <input type="text" placeholder="Email or Username" required>
-    <input type="password" placeholder="Password" required>
-    <input type="password" placeholder="Confirm Password" required>
+    <input type="text" [(ngModel)]="username" placeholder="Email or Username" required>
+    <input type="password" ([ngModel)]="password" placeholder="Password" required>
+    <input type="password" ([ngModel)]="cfn_password" placeholder="Confirm Password" required>
 
 
-    <button>Reset</button>
+    <button (click)="onReset()">Reset</button>
 
     <div class="btns">
         <div class="register">
