--- a/client/src/app/Modules/Login/login/login.html
+++ b/client/src/app/Modules/Login/login/login.html
@@ -7,7 +7,7 @@
 <div class="login-container">
     <h2>Login</h2>
 
-    <input type="text" [(ngModel)]="name"  placeholder="Email or Username" required>
+    <input type="text" [(ngModel)]="username"  placeholder="Email or Username" required>
     <input type="password" [(ngModel)]="pass" placeholder="Password" required>
 
     <div class="forgot">
