--- a/client/src/app/Modules/Register/signup/signup.html
+++ b/client/src/app/Modules/Register/signup/signup.html
@@ -4,18 +4,18 @@
     </svg>
 </div>
 
-<form class="register-container">
+<div class="register-container">
     <h2>Register</h2>
 
-    <input type="text" placeholder="Username" required>
-    <input type="text" placeholder="Email" required>
-    <input type="password" placeholder="Password" required>
-    <input type="password" placeholder="Confirm Password" required>
+    <input type="text" [(ngModel)]="username" placeholder="Username" required>
+    <input type="text" [(ngModel)]="email" placeholder="Email" required>
+    <input type="password" [(ngModel)]="password" placeholder="Password" required>
+    <input type="password" [(ngModel)]="cfn_password" placeholder="Confirm Password" required>
 
-    <button>Register</button>
+    <button (click)="onRegister()">Register</button>
 
     <div class="register">
         Have a account
         <a routerLink="/login">Login</a>
     </div>
-</form>
+</div>
